2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

        * lib/PandoraFMS/Core.pm: Fixed an error with group_statistics agent
        queries.

2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed an error with group_statistics agent
	queries.

2012-06-12  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added export server stats.

2012-06-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/ReconServer.pm: fixed the recode into html entities
	the name of network component into the function
	"create_network_profile_modules".

2012-06-11 Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandora_server/util/pandora_xml_stress.pl: cleaned source code
	style.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed an error counting 
	unknown agents in groups.

2012-05-31  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Hide wmic error messages and improved
	  error checking.

2012-05-30  Sancho Lerena <slerena@artica.es>
	
	* lib/PandoraFMS/Core.pm: Fixed description/comment for a function.

	* lib/PandoraFMS/Core.pm: Updated batch statistic queries to get
	information about groups. SQL code taken from new functions in
	functions_group.php. Unified criteria to calculate information.

2012-05-29  Sancho Lerena <slerena@artica.es>

	* util/pandora_manage.pl,
	pandora_server_upgrade,
	DEBIAN/control,
	README,
	pandora_server.spec,
	lib/PandoraFMS/Config.pm,
	pandora_server.redhat.spec: Updated version string to 4.0.2

2012-05-29  Koichiro Kikuchi <koichiro@rworks.jp>

	* util/pandora_db.pl: Merged from trunk: Don't delete non-initialized
	 modules which belong to disabled agent.

2012-05-21  Koichiro Kikuchi  <koichiro@rworks.jp>

	* util/pandora_db.pl: Set default DB port number when it's not
	 specified in the configuration file.

2012-05-17  Koichiro Kikuchi  <koichiro@rworks.jp>

	* conf/pandora_server.conf.windows,
	  conf/pandora_server.conf,